--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@ pre[class*="language-"]{
 .container{
   width:95%;
   margin:0 auto
+  overflow: hidden;
 }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.15.0/prism.min.js"></script>
@@ -287,6 +288,7 @@ pre[class*="language-"]{
       }
       img {
         border-radius: 10px;
+        width: 85%;
       }
     </style>
     
